fixed text align

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body
 {
 	font: 20px Montserrat, sans-serif;
-    line-height: 1.8;
-    color: black;
+  line-height: 1.8;
+  color: black;
+  text-align: center;
 }
 
 p 
